[metadata]
name = networking-extreme
summary = Extreme Networks Service Plugins and ML2 mechanism drivers for Neutron
description-file =
    README.rst
author = Extreme Networks
author-email = ml2-openstack@extremenetworks.com
home-page = http://www.extremenetworks.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking-extreme

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking-extreme/locale
domain = networking-extreme

[update_catalog]
domain = networking-extreme
output_dir = networking-extreme/locale
input_file = networking-extreme/locale/networking-extreme.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking-extreme/locale/networking-extreme.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
